fixes current on mobile map

--- a/web/src/components/Map/map.module.css
+++ b/web/src/components/Map/map.module.css
@@ -38,7 +38,7 @@
         width:calc(100vw/1.38 - 1px);
       }
 }
-.root h5:nth-child(1)::after{
+/* .root h5:nth-child(1)::after{
     content: 'current';
     background-color: var(--color-black);
     color:var(--color-white);
@@ -48,7 +48,7 @@
     line-height:1;
     text-align: left;
     font-size:0.7em;
-}
+} */
 .root h5{
     position: absolute;
     z-index: 8;
@@ -59,6 +59,7 @@
     background-color: #f8f5f2fc;
     cursor: pointer;
     text-transform: uppercase;
+    text-shadow: #fff 10px 10px 10px;
     @media (--media-min-small) {
         background: transparent;
     }
